// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create project 1`] = `
"<header>
  <a href=\\"\\" class=\\"logo\\">Simple CI
    <!--default-->
  </a>
</header>
<!--Header-->
<main>
  <ul class=\\"breadcrumb\\">
    <li>
      <a href=\\"\\" class=\\"\\">Projects
        <!--default-->
      </a>
    </li>
    <!--if-->
    <!--if-->
    <li>Create project</li>
  </ul>
  <!--BreadCrumb-->
  <!--if-->
  <!--ErrorsPanel-->
  <div class=\\"project-create-form\\">
    <form>
      <div class=\\"group\\">
        <input name=\\"name\\" type=\\"text\\" required=\\"\\"><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
        <label>Name</label>
      </div>
      <div class=\\"group\\">
        <input name=\\"cwd\\" type=\\"text\\" required=\\"\\"><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
        <label>Current Work Directory</label>
      </div>
      <div class=\\"group\\">
        <button type=\\"submit\\"><span>Create</span></button>
      </div>
    </form>
  </div>
  <!--ProjectForm-->
</main>
<footer> Sham 2018 </footer>
<!--Footer-->"
`;

exports[`create project 2`] = `
"<header>
  <a href=\\"\\" class=\\"logo\\">Simple CI
    <!--default-->
  </a>
</header>
<!--Header-->
<main>
  <!--if-->
  <!--ErrorsPanel-->
  <div class=\\"project-list\\">
    <a href=\\"projects/1\\" class=\\"project-card\\"><span class=\\"name\\">Test</span>
      <!--default-->
    </a>
    <!--LinkTo-->
    <!--for-->
    <a href=\\"projects/create\\" class=\\"project-card project-card-create\\">
      <div class=\\"create-icon\\"></div>
      <!--default-->
    </a>
    <!--LinkTo-->
  </div>
  <!--ProjectsList-->
  <!--if-->
</main>
<footer> Sham 2018 </footer>
<!--Footer-->"
`;
